add table to sort cars

--- a/web/index.html
+++ b/web/index.html
@@ -504,7 +504,7 @@
     </section>
 
     <!--Customer Dashboard-->
-    <section id="CustomerDashBoard" style="width: 100%; height: 100% ;background-color: whitesmoke;">
+    <section id="CustomerDashBoard" style="width: 100%; height: 100% ;background-color: white;">
 
         <img src="assets/images/1200x-1.jpg" alt="bg image" style="width: 100%; height: 75vh" class="img-fluid">
 
@@ -622,7 +622,7 @@
     </section>
 
     <!--More Space to view car-->
-    <section id="moreSpace" style="width: 100%; height: 200% ;background-color: whitesmoke;">
+    <section id="moreSpace" style="width: 100%; height: 200% ;background-color: white;">
 
         <!--sort section and available cars-->
         <div class="row w-100 h-25 mt-3 text-center">
@@ -652,7 +652,7 @@
         <!--all cars-->
         <div class="center-block" style="width: 80%; position: relative;top: -10%">
 
-            <div class="row h-100 mb-3">
+           <!-- <div class="row h-100 mb-3">
 
                 <div class="col center-block bg-white me-3 ms-3 thumbnail shadow" style="height: 100%;">
 
@@ -1244,7 +1244,65 @@
 
                 </div>
 
+            </div>-->
+
+            <div>
+                <table class="table align-middle mb-0 bg-white table-responsive table-bordered align-middle">
+                   <!-- <thead class="">
+                    <tr>
+                        <th>Image</th>
+                        <th>Brand</th>
+                        <th>Colour</th>
+                        <th>Type</th>
+                        <th>Fuel Type</th>
+                        <th>Transmission Type</th>
+                        <th>Rent Fee</th>
+                    </tr>
+                    </thead>-->
+                    <tbody class="">
+                    <tr>
+                        <td>
+                            <div class="d-flex">
+                                <img src="assets/images/1200x-1.jpg" alt="" style="width: 250px; height: 200px" class=""/>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="">
+                                <p class="fw-bold mb-1 mt-1 fs-1">Luxury</p>
+                                <p class="mb-5 mt-1 text-muted fs-3">BMW i8 * 2</p>
+                                <div class="center-block">
+                                    <p class="mt-5 text-muted"><i class="fas fa-palette text-warning me-2"></i>Black</p>
+                                    <p class="text-muted"><i class="fas fa-chair text-warning me-1"></i> 5 <span class="ms-1">seats</span></p>
+                                    <p class="text-muted"><i class="fab fa-adn text-warning me-2"></i>Auto</p>
+                                    <p class="text-muted"><i class="fas fa-oil-can text-warning me-2"></i>Petrol</p>
+                                    <p class="text-muted "><i class="far fa-snowflake text-warning me-2"></i>A/C</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div style="position: relative; top: 7em">
+                                <p class="text-muted">100<span class="ms-2">km free/day</span></p>
+                                <p class="text-muted">500<span class="ms-2">km free/month</span></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div style="position: relative; top: 7em">
+                                <p class="text-muted"><span class="me-2">Rs.</span>2000.00<span class="ms-2">/extra km</span></p>
+                            </div>
+                        </td>
+                        <td>
+                            <h2 class="text-danger text-center">DAILY RENTAL</h2>
+                            <h2 class="text-danger text-center">10000.00<span>/=</span></h2>
+                            <h2 class="text-danger text-center">MONTHLY RENTAL</h2>
+                            <h2 class="text-danger text-center">25000.00<span>/=</span></h2>
+                            <button type="button" class="btn btn-outline-success border border-2 border-success center-block">Success</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
             </div>
+
 
         </div>
 
