add icons to tables

--- a/web/index.html
+++ b/web/index.html
@@ -1247,7 +1247,7 @@
             </div>-->
 
             <div>
-                <table class="table align-middle mb-0 bg-white table-responsive table-bordered align-middle">
+                <table class="table align-middle mb-0 bg-white table-responsive ">
                    <!-- <thead class="">
                     <tr>
                         <th>Image</th>
@@ -1259,17 +1259,17 @@
                         <th>Rent Fee</th>
                     </tr>
                     </thead>-->
-                    <tbody class="">
-                    <tr>
+                    <tbody class="border border-1">
+                    <tr class="mb-5 rounded rounded-6">
                         <td>
                             <div class="d-flex">
-                                <img src="assets/images/1200x-1.jpg" alt="" style="width: 250px; height: 200px" class=""/>
+                                <img src="assets/images/bmw%20front%20view.png" alt="" style="width: 250px; height: 200px" class="center-block"/>
                             </div>
                         </td>
                         <td>
                             <div class="">
                                 <p class="fw-bold mb-1 mt-1 fs-1">Luxury</p>
-                                <p class="mb-5 mt-1 text-muted fs-3">BMW i8 * 2</p>
+                                <p class="mb-5 mt-1 fw-normal fs-3">BMW i8 * 2</p>
                                 <div class="center-block">
                                     <p class="mt-5 text-muted"><i class="fas fa-palette text-warning me-2"></i>Black</p>
                                     <p class="text-muted"><i class="fas fa-chair text-warning me-1"></i> 5 <span class="ms-1">seats</span></p>
@@ -1283,19 +1283,98 @@
                             <div style="position: relative; top: 7em">
                                 <p class="text-muted">100<span class="ms-2">km free/day</span></p>
                                 <p class="text-muted">500<span class="ms-2">km free/month</span></p>
-                            </div>
-                        </td>
-                        <td>
-                            <div style="position: relative; top: 7em">
                                 <p class="text-muted"><span class="me-2">Rs.</span>2000.00<span class="ms-2">/extra km</span></p>
                             </div>
                         </td>
                         <td>
-                            <h2 class="text-danger text-center">DAILY RENTAL</h2>
-                            <h2 class="text-danger text-center">10000.00<span>/=</span></h2>
-                            <h2 class="text-danger text-center">MONTHLY RENTAL</h2>
-                            <h2 class="text-danger text-center">25000.00<span>/=</span></h2>
-                            <button type="button" class="btn btn-outline-success border border-2 border-success center-block">Success</button>
+                            <div class="center-block" style="position: relative;top: 127px;">
+                                <span class="badge badge-warning badge-lg bg-info rounded-pill d-inline fs-1">Available</span>
+                            </div>
+                        </td>
+                        <td>
+                            <h3 class="text-danger text-center fw-bold mt-3">DAILY RENTAL</h3>
+                            <h2 class="text-danger text-center mt-0 mb-2">10000.00<span>/=</span></h2>
+                            <h3 class="text-danger text-center fw-bold">MONTHLY RENTAL</h3>
+                            <h2 class="text-danger text-center mt-0 mb-5">25000.00<span>/=</span></h2>
+                            <button type="button" class="btn btn-outline-success border border-3 border-success center-block w-75 mt-2 mb-0">RENT NOW</button>
+                        </td>
+                    </tr>
+                    <tr class="mb-5 rounded rounded-6">
+                        <td>
+                            <div class="d-flex">
+                                <img src="assets/images/bmw%20side%20view.jpeg" alt="" style="width: 250px; height: 200px" class="center-block"/>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="">
+                                <p class="fw-bold mb-1 mt-1 fs-1">Luxury</p>
+                                <p class="mb-5 mt-1 text-secondary fs-3">BMW i8 * 2</p>
+                                <div class="center-block">
+                                    <p class="mt-5 text-muted"><i class="fas fa-palette text-warning me-2"></i>Black</p>
+                                    <p class="text-muted"><i class="fas fa-chair text-warning me-1"></i> 5 <span class="ms-1">seats</span></p>
+                                    <p class="text-muted"><i class="fab fa-adn text-warning me-2"></i>Auto</p>
+                                    <p class="text-muted"><i class="fas fa-oil-can text-warning me-2"></i>Petrol</p>
+                                    <p class="text-muted "><i class="far fa-snowflake text-warning me-2"></i>A/C</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div style="position: relative; top: 7em">
+                                <p class="text-muted">100<span class="ms-2">km free/day</span></p>
+                                <p class="text-muted">500<span class="ms-2">km free/month</span></p>
+                                <p class="text-muted"><span class="me-2">Rs.</span>2000.00<span class="ms-2">/extra km</span></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="center-block" style="position: relative;top: 127px;">
+                                <span class="badge badge-warning badge-lg bg-info rounded-pill d-inline fs-1">Available</span>
+                            </div>
+                        </td>
+                        <td>
+                            <h3 class="text-danger text-center fw-bold mt-3">DAILY RENTAL</h3>
+                            <h2 class="text-danger text-center mt-0 mb-2">10000.00<span>/=</span></h2>
+                            <h3 class="text-danger text-center fw-bold">MONTHLY RENTAL</h3>
+                            <h2 class="text-danger text-center mt-0 mb-5">25000.00<span>/=</span></h2>
+                            <button type="button" class="btn btn-outline-success border border-3 border-success center-block w-75 mt-2 mb-0">RENT NOW</button>
+                        </td>
+                    </tr>
+                    <tr class="mb-5 rounded rounded-6">
+                        <td>
+                            <div class="d-flex">
+                                <img src="assets/images/bmw%20side%20view.jpg" alt="" style="width: 250px; height: 200px" class="center-block"/>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="">
+                                <p class="fw-bold mb-1 mt-1 fs-1">Luxury</p>
+                                <p class="mb-5 mt-1 text-secondary fs-3">BMW i8 * 2</p>
+                                <div class="center-block">
+                                    <p class="mt-5 text-muted"><i class="fas fa-palette text-warning me-2"></i>Black</p>
+                                    <p class="text-muted"><i class="fas fa-chair text-warning me-1"></i> 5 <span class="ms-1">seats</span></p>
+                                    <p class="text-muted"><i class="fab fa-adn text-warning me-2"></i>Auto</p>
+                                    <p class="text-muted"><i class="fas fa-oil-can text-warning me-2"></i>Petrol</p>
+                                    <p class="text-muted "><i class="far fa-snowflake text-warning me-2"></i>A/C</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div style="position: relative; top: 7em">
+                                <p class="text-muted">100<span class="ms-2">km free/day</span></p>
+                                <p class="text-muted">500<span class="ms-2">km free/month</span></p>
+                                <p class="text-muted"><span class="me-2">Rs.</span>2000.00<span class="ms-2">/extra km</span></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="center-block" style="position: relative;top: 127px;">
+                                <span class="badge badge-warning badge-lg bg-info rounded-pill d-inline fs-1">Available</span>
+                            </div>
+                        </td>
+                        <td>
+                            <h3 class="text-danger text-center fw-bold mt-3">DAILY RENTAL</h3>
+                            <h2 class="text-danger text-center mt-0 mb-2">10000.00<span>/=</span></h2>
+                            <h3 class="text-danger text-center fw-bold">MONTHLY RENTAL</h3>
+                            <h2 class="text-danger text-center mt-0 mb-5">25000.00<span>/=</span></h2>
+                            <button type="button" class="btn btn-outline-success border border-3 border-success center-block w-75 mt-2 mb-0">RENT NOW</button>
                         </td>
                     </tr>
                     </tbody>
