check duplicate car id

--- a/web/index.html
+++ b/web/index.html
@@ -1282,7 +1282,7 @@
             <div>
                 <table class="table align-middle mb-5 mt-5 bg-white table-responsive " id="tblShowCars">
 
-                    <tbody class="border border-1">
+                    <tbody class="">
 
                     </tbody>
                 </table>
