update contact us

--- a/web/index.html
+++ b/web/index.html
@@ -502,6 +502,7 @@
         </div>
 
     </section>
+
     <!--Customer Dashboard-->
     <section id="CustomerDashBoard" style="width: 100%; height: 100% ;background-color: white;">
 
@@ -1706,7 +1707,7 @@
                 <div class="container-fluid">
                     <div class="row" >
                         <div class="col  me-5 ms-5 center-block"  style="width: 100%; height: 50vh">
-                            <img src="assets/images/Self-Drive-Car-Rental-Agreement.jpg" alt="" class="img-thumbnail img-fluid img-responsive" style="width: 100%; height: 50vh">
+                            <img src="assets/images/istockphoto-1157655660-612x612.jpg" alt="" class=" img-fluid img-responsive" style="width: 100%; height: 50vh">
                         </div>
 
                         <div class="col me-5 ms-5" style="position: relative;top: 80px">
@@ -2011,7 +2012,7 @@
 
                         <!--Checkbox-->
                         <div class="form-check d-flex justify-content-center mb-4">
-                            <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                            <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" />
                             <label class="form-check-label" for="form4Example4">
                                 Send me a copy of this message
                             </label>
@@ -2024,13 +2025,18 @@
 
                 <div class="col ms-5 ">
                     <div class="w-75 h-100 center-block ms-5 border-2 border-light thumbnail img-responsive shadow">
-                        <h2 class="mb-4 ms-5">Contact Info</h2>
-                        <h3 class="ms-5 ">Address :</h3>
-                        <h4 class="ms-5 text-primary">NO:4/2, Main Street, Galle</h4>
-                        <h3 class="ms-5">Phone :</h3>
-                        <h4 class="ms-5 text-primary">+94 718220009</h4>
-                        <h3 class="ms-5">Email :</h3>
-                        <h4 class="ms-5 text-primary">rentcar@gmail.com</h4>
+                        <img src="assets/images/istockphoto-870307396-170667a.jpg" alt="" style="width: 100%;height: 100%">
+                        <div style="position: absolute;top: -7%">
+                            <h2 class="mb-4 ms-5 "  style="color: transparent" >Contact Info</h2>
+                            <h3 class="ms-5" style="color: transparent">Phone :</h3>
+                            <h4 class="ms-5 text-muted">+94 718220009</h4>
+                            <h3 class="ms-5"  style="color: transparent">Address :</h3>
+                            <h4 class="ms-5 text-muted">NO:4/2, Main Street, Galle</h4>
+                            <h3 class="ms-5"  style="color: transparent">Email :</h3>
+                            <h4 class="ms-5 text-muted">rentcar@gmail.com</h4>
+                            <h3 class="ms-5"  style="color: transparent">Fax :</h3>
+                            <h4 class="ms-5 text-muted">+ 01 234 567 89</h4>
+                        </div>
                     </div>
                 </div>
             </div>
