--- a/web/index.html
+++ b/web/index.html
@@ -56,9 +56,9 @@
 <main style="width: 100%; height: 100vh;">
 
     <!--Navigation Bar-->
-    <section id="NavBar" style="z-index: 6">
+    <section id="NavBar" style="z-index: 6;">
 
-        <nav class=" navbar-expand-lg navbar " style="position: absolute; width: 100%; top: 10px;z-index: 3">
+        <nav class=" navbar-expand-lg navbar " style="position: fixed; width: 100%; top: 0;z-index: 3;background-color: rgba(0, 0, 0, 0.6);">
             <div class="container">
                 <img src="assets/logo/logocar.png" id="logoImage" height="60" alt="Car Rental Logo"/>
 
