successfully update cars

--- a/web/index.html
+++ b/web/index.html
@@ -2401,7 +2401,7 @@
                             <!-- driver password -->
                             <div class="form-outline mb-2 ms-4 ">
                                 <label class="form-label text-dark fw-light fs-4" for="driverPassword">* Password</label>
-                                <input type="text" id="driverPassword" class="form-control bg-white rounded-3" name=""/>
+                                <input type="password" id="driverPassword" class="form-control bg-white rounded-3" name=""/>
                                 <p><small id="errorDPassword" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
