--- a/web/index.html
+++ b/web/index.html
@@ -2019,9 +2019,9 @@
 
             </div>
 
-            <div style="width: 98vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto" class="table-responsive text-nowrap">
+            <div style="width: 98vw; height: 60vh;position: relative; top: 120px;right: 0;bottom: 0;left: 0;margin: auto" class="table-responsive ">
 
-                <table id="tblCars" class="table align-middle mb-0 bg-white table table-responsive table-bordered table-hover w-auto" style="position: relative;left: 243px;top: 44px;">
+                <table id="tblCars" class="table align-middle mb-0 bg-white table table-responsive table-bordered table-hover w-auto text-nowrap" style="position: relative;left: 243px;top: 50px;">
                     <thead class="bg-light">
                     <tr>
                         <th>Car Id</th>
@@ -2392,6 +2392,7 @@
                         <div class="col">
                             <!-- driver username -->
                             <div class="form-outline mb-2 ms-4 ">
+                                <label class="form-label text-dark fw-light" id="driverUserId"></label>
                                 <label class="form-label text-dark fw-light fs-4" for="driverUsername">* Username</label>
                                 <input type="text" id="driverUsername" class="form-control bg-white rounded-3" name=""/>
                                 <p><small id="errorDriverUsername" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
@@ -3080,33 +3081,30 @@
         </div>
 
         <div class="container-fluid" style="position: relative;top: 100px;left: 75px;width: 75vw;height: 50px">
-            <div class="row">
-                <div class="col-6 mb-0 img-fluid img-thumbnail img-responsive">
+            <div class="row center-block">
+                <div class="col mb-0 img-responsive">
                     <div class="btn-group btn-group-xm center-block center-block" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-primary ">Daily Income</button>
-                        <button type="button" class="btn btn-success ">Weekly Income</button>
-                        <button type="button" class="btn btn-danger ">Monthly Income</button>
-                        <button type="button" class="btn btn-warning ">Annually Income</button>
+                        <button type="button" class="btn btn-primary btn-lg">Daily Income</button>
+                        <button type="button" class="btn btn-success btn-lg">Weekly Income</button>
+                        <button type="button" class="btn btn-danger btn-lg">Monthly Income</button>
+                        <button type="button" class="btn btn-warning btn-lg">Annually Income</button>
                     </div>
                 </div>
-
-                <div class="col-3 mt-0 bg-white img-fluid img-thumbnail img-responsive mb-0">
-                    <div class="container">
-                        <div class="input-group date" style="width: 250px">
-                            <input type="text" id="startDate" class="form-control" placeholder="Start Date">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                        </div>
-                        <label style="font-size: 15px" for="startDate" class="text-black">Start Date</label>
+            </div>
+            <div class="row center-block">
+                <div class="col mt-0 bg-white img-responsive mb-0">
+                    <div class="input-group date" style="width: 250px">
+                        <input type="text" id="startDate" class="form-control" placeholder="Start Date">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                     </div>
+                    <label style="font-size: 15px" for="startDate" class="text-black">Start Date</label>
                 </div>
-                <div class="col-3 mt-0 img-fluid img-thumbnail img-responsive">
-                    <div class="container ">
-                        <div class="input-group date" style="width: 250px">
-                            <input type="text" id="endDate" class="form-control" placeholder="End Date">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                        </div>
-                        <label style="font-size: 15px" for="endDate" class="text-black">End Date</label>
+                <div class="col mt-0 img-responsive">
+                    <div class="input-group date" style="width: 250px">
+                        <input type="text" id="endDate" class="form-control" placeholder="End Date">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                     </div>
+                    <label style="font-size: 15px" for="endDate" class="text-black">End Date</label>
                 </div>
             </div>
         </div>
